force-app/main/default/objects/VCC_Appointment_Batch_Delete_Config__mdt/VCC_Appointment_Batch_Delete_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration used for Scheduled Batch Class to clean up stale Appointment and Appointment Request records.</description>
    <label>VCC Appointment Batch Delete Config</label>
    <pluralLabel>VCC Appointment Batch Delete Configs</pluralLabel>
</CustomObject>