force-app/main/default/objects/VCC_Appointment_Batch_Delete_Config__mdt/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <description>Class name passed as a string via callable.</description>
    <label>Class Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>