force-app/main/default/objects/VCC_Appointment_Batch_Delete_Config__mdt/fields/Number_of_Hours_for_Appts_and_Open_Reqs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Hours_for_Appts_and_Open_Reqs__c</fullName>
    <description>Used to calculate number of hours in the past, to delete records older than that.
Value is used for query for and delete Appointment records and Appointment Request records that are not closed.</description>
    <label>Number of Hours for Appts and Open Reqs</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>