force-app/main/default/objects/VCC_Appointment_Batch_Delete_Config__mdt/fields/Run_Batch__c.field-meta.xml
<CustomField>
    <fullName>Run_Batch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Switch that can be used to run or not run batch class from Schedulable.
Job can remain scheduled, but this field can be set to false if you don&apos;t want it to run temporarily.</description>
    <label>Run Batch</label>
    <type>Checkbox</type>
</CustomField>